tests/fixtures/positive/release-engineering/CommentedOutCodeBlock.kt
package com.example.releaseengineering

fun renderResult() {
    // val result = compute()
    // if (result > 0) {
    //     render(result)
    // }
    println("done")
}
