tests/fixtures/negative/release-engineering/CommentedOutCodeBlock.kt
package com.example.releaseengineering

fun renderResult() {
    // This explains the render path in prose.
    // Keep the implementation readable for future maintainers.
    // See the docs for the live implementation details.
    println("done")
}
